# CosApp

./: .gitignore  CMakeLists.txt  CMakeListsALL.txt  LogView.db  Makefile  main.cpp
Sqlite/: CppSQLite3.cpp  SqliteManager.cpp
event/include/event2/: event-config.h
event/lib/: libevent-2.0.so.5.1.9  libevent_core-2.0.so.5  libevent_pthreads-2.0.so.5.1.9
lib/: libboost_atomic.so.1.57.0  libboost_filesystem.so.1.57.0  libboost_locale.so.1.57.0  libboost_regex.so.1.57.0  libboost_thread.so.1.57.0
